Opened 5 years ago

Closed 5 years ago

Last modified 5 years ago

#15919 closed bug (fixed)

Pulse uses old Intel logo

Reported by: pulkomandy Owned by: nobody
Priority: normal Milestone: R1/beta2
Component: Applications/Pulse Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Intel changed its logo in 2006. We should use the new one.

The logo is currently stored hardcoded in the "CPU chip" picture (there are multiple versions with different logos in the "Pictures" file as I think archived BBitmaps. We should probably switch to vector, however, importing the Intel logo from SVG in Icon-O-Matic or WonderBrush failed for me, so we'll have to fix that first.

Probably we can fix #6904 in the process by making the chip larger or moving the text outside of the chip (I miss the time when CPUs would just be named "Pentium", right?).

Attachments (1)

Pulse.png (16.2 KB ) - added by diver 5 years ago.

Download all attachments as: .zip

Change History (12)

comment:1 by pulkomandy, 5 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev54187.

comment:2 by diver, 5 years ago

hrev54187 x86_64.

I don't seem to see Intel's logo:

by diver, 5 years ago

Attachment: Pulse.png added

comment:3 by diver, 5 years ago

Also CPU model in barely readable.

comment:4 by pulkomandy, 5 years ago

CPU model being too small is #6904 as linked in ticket description (and did not change here, it's as small as before). It needs reworking because the "chip" image is a fixed size bitmap. I will look into it later (and fix the ugly grey corners, too).

The logo was not used for 64bit systems (already before this change), this is fixed in hrev54189.

comment:5 by diver, 5 years ago

../src/apps/pulse/NormalPulseView.cpp: In member function 'void NormalPulseView::DetermineVendorAndProcessor(':
../src/apps/pulse/NormalPulseView.cpp:158:13: error: 'PowerPCLogo' was not declared in this scope
      logo = PowerPCLogo;
             ^~~~~~~~~~~

comment:6 by waddlesplash, 5 years ago

Fied in hrev54190.

comment:7 by diver, 5 years ago

BTW, shouldn't image corners be transparent instead of being gray?

comment:8 by pulkomandy, 5 years ago

Yes, I will look into that too when I replace the CPU chip image. Currently it's an hardcoded image and I think it just uses the grey that was used on BeOS for background.

comment:9 by kallisti5, 5 years ago

I actually like the old chip image.. It's "generic" and gives a nice vintage feel. I'm likely just old though :-)

comment:10 by pulkomandy, 5 years ago

I don't plan on changing it much, just making it a bit larger so we can fit the text on it.

comment:11 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.