Pulse: update Intel logo

They use a new logo since 2006.

While I'm at it, also add logos for Cyrix and Via which were missing
previously (there are a few other missing but they are even more
uncommon). Use vector logos which can be scaled as needed. However, the
CPU chip background is still a bitmap, so we can't scale things just
yet.

Fixes #15919.